Fixing z-index of autocomplete list.

--- a/css/owner-fieldset.css
+++ b/css/owner-fieldset.css
@@ -45,3 +45,7 @@ a.po-auto-assign {
 .disabled {
     opacity: 0.5;
 }
+
+.ui-autocomplete.ui-menu {
+    z-index: 200;
+}
